k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nionpulse-worker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: nionpulse-worker:latest
